Javadoc on the launcher.